fixed sizing issue with UGA logo on mobile, and centering

--- a/src/Components/Resume/css/Resume.css
+++ b/src/Components/Resume/css/Resume.css
@@ -34,7 +34,7 @@
 }
 
 .Resume-img img {
-    width: 400px;
+    max-width: 40%;
 }
 
 .School-information {
