--- a/src/css/Layout.css
+++ b/src/css/Layout.css
@@ -114,6 +114,7 @@
 
 .Section-title h1 {
     margin: auto;
+    text-align: center;
     text-shadow: 1.5px 1.5px lightgray;
 }
 
